name: jsaddle-hello
version: 2.0.0.0
cabal-version: >=1.24
build-type: Custom
license: MIT
license-file: LICENSE
copyright: (c) Hamish Mackenzie
maintainer: Hamish Mackenzie <Hamish.K.Mackenzie@gmail.com>
stability: stable
homepage: https://github.com/ghcjs/jsaddle-hello
bug-reports: https://github.com/ghcjs/jsaddle-hello/issues
synopsis: JSaddle Hello World, an example package
description:
    This is an implementation of the classic "Hello World" program using JSaddle,
    as an example of how to create a minimal JSaddle application.
    Please submit any suggestions and improvements.
category: Web
author: Hamish Mackenzie

source-repository head
    type: git
    location: https://github.com/ghcjs/jsaddle-hello

custom-setup
  setup-depends: base >= 4.6,
                 Cabal >= 1.24.2 && < 1.25,
                 cabal-macosx >= 0.2.3.4 && < 0.3

library
    build-depends:
        base >=4.2 && <5,
        jsaddle >=0.8.0.0 && <0.9,
        lens >=4.0.7 && <5.0,
        text >=1.2.2.1 && <1.3
    exposed-modules: JSaddleHello
    hs-source-dirs: src

executable jsaddle-hello
    main-is: WarpMain.hs
    build-depends:
        base >=4.2 && <5,
        jsaddle-hello -any,
        jsaddle-warp >=0.8.0.0 && <0.9,
        lens >=4.0.7 && <5.0,
        text >=1.2.2.1 && <1.3
    hs-source-dirs: src-exe
    ghc-options: -threaded

executable jsaddle-hello-webkitgtk
    if impl(ghcjs)
        buildable: False
    main-is: WebKitGTKMain.hs
    build-depends:
        base >=4.2 && <5,
        jsaddle-hello -any,
        jsaddle-webkit2gtk >=0.8.0.0 && <0.9,
        lens >=4.0.7 && <5.0,
        text >=1.2.2.1 && <1.3
    hs-source-dirs: src-exe
    ghc-options: -threaded

executable jsaddle-hello-wkwebview
    if !os(osx) || impl(ghcjs)
        buildable: False
    main-is: WKWebViewMain.hs
    build-depends:
        base >=4.2 && <5,
        jsaddle-hello -any,
        jsaddle-wkwebview >=0.8.1.0 && <0.9,
        lens >=4.0.7 && <5.0,
        text >=1.2.2.1 && <1.3
    hs-source-dirs: src-exe
    ghc-options: -threaded

