cabal-version: 3.0
name: jsaddle-hello
version: 2.0.0.1
build-type: Simple
license: MIT
license-file: LICENSE
copyright: (c) Hamish Mackenzie
maintainer: Hamish Mackenzie <Hamish.K.Mackenzie@gmail.com>
stability: stable
homepage: https://github.com/ghcjs/jsaddle-hello
bug-reports: https://github.com/ghcjs/jsaddle-hello/issues
synopsis: JSaddle Hello World, an example package
description:
    This is an implementation of the classic "Hello World" program using JSaddle,
    as an example of how to create a minimal JSaddle application.
    Please submit any suggestions and improvements.
category: Web
author: Hamish Mackenzie

source-repository head
    type: git
    location: https://github.com/ghcjs/jsaddle-hello

--custom-setup
--  setup-depends: base >= 4.6,
--                 Cabal >= 3.0 && < 3.11,
--                 cabal-macosx >= 0.2.3.4 && < 0.3

library
    build-depends:
        base >=4.2 && <5,
        jsaddle >=0.8.0.0 && <0.10,
        lens >=4.0.7 && <5.4,
        text >=1.2.2.1 && <2.2
    exposed-modules: JSaddleHello
    hs-source-dirs: src
    default-language: Haskell2010

executable jsaddle-hello
    main-is: WarpMain.hs
    build-depends:
        base >=4.2 && <5,
        jsaddle-hello -any,
        jsaddle-warp >=0.8.0.0 && <0.10,
        lens >=4.0.7 && <5.4,
        text >=1.2.2.1 && <2.2
    hs-source-dirs: src-exe
    ghc-options: -threaded
    default-language: Haskell2010
    if arch(javascript) && impl(ghc >= 9.10.1)
      ghc-options: -ddisable-js-c-sources

executable jsaddle-hello-webkitgtk
    if impl(ghcjs) || arch(javascript) || os(osx)
        buildable: False
    main-is: WebKitGTKMain.hs
    build-depends:
        base >=4.2 && <5,
        jsaddle-hello -any,
        jsaddle-webkit2gtk >=0.8.0.0 && <0.10,
        lens >=4.0.7 && <5.4,
        text >=1.2.2.1 && <2.2
    hs-source-dirs: src-exe
    ghc-options: -threaded
    default-language: Haskell2010

executable jsaddle-hello-wkwebview
    if !os(osx) || impl(ghcjs) || arch(javascript)
        buildable: False
    main-is: WKWebViewMain.hs
    build-depends:
        base >=4.2 && <5,
        jsaddle-hello -any,
        jsaddle-wkwebview >=0.8.1.0 && <0.10,
        lens >=4.0.7 && <5.4,
        text >=1.2.2.1 && <2.2
    hs-source-dirs: src-exe
    ghc-options: -threaded
    default-language: Haskell2010

